tor (0.1.1.8-alpha-cvs-1) experimental; urgency=low

  * CVS snapshot. Mon, 17 Oct 2005 03:54:01 +0200
  * Remove 08_add_newlines_between_serverdescriptors.dpatch.
  * Update 06_add_compile_time_defaults.dpatch

 -- Peter Palfrader <weasel@debian.org>  Mon, 17 Oct 2005 03:58:58 +0200

tor (0.1.1.8-alpha-1) experimental; urgency=low

  * New upstream version.
  * Add patch from CVS to
    "Insert a newline between all router descriptors when generating (old
    style) signed directories, in case somebody was counting on that".
    r1.247 of dirserv.c, <20051008060243.85F41140808C@moria.seul.org>

 -- Peter Palfrader <weasel@debian.org>  Sat,  8 Oct 2005 20:24:39 +0200

tor (0.1.1.7-alpha-1) experimental; urgency=low

  * New upstream version.
  * More merging from 0.1.0.14+XXXX:
    - The tor-dbg package does not really need its own copy of copyright
      and changelog in usr/share/doc/tor-dbg.
  * Forward port 03_tor_manpage_in_section_8.dpatch

 -- Peter Palfrader <weasel@debian.org>  Wed, 14 Sep 2005 17:52:35 +0200

tor (0.1.1.6-alpha-2) experimental; urgency=low

  * Merge 0.1.0.14+XXXX changes.

 -- Peter Palfrader <weasel@debian.org>  Wed, 14 Sep 2005 15:05:16 +0200

tor (0.1.1.6-alpha-1) experimental; urgency=low

  * Experimental upstream version.

 -- Peter Palfrader <weasel@debian.org>  Sat, 10 Sep 2005 10:17:43 +0200

tor (0.1.1.5-alpha-cvs-1) UNRELEASED; urgency=low

  * Even more experimental cvs snapshot.
  * Testsuite is mandatory again.
  * Forward port 03_tor_manpage_in_section_8.dpatch
  * Forward port 06_add_compile_time_defaults.dpatch

 -- Peter Palfrader <weasel@debian.org>  Fri,  9 Sep 2005 23:22:38 +0200

tor (0.1.1.5-alpha-1) UNRELEASED; urgency=low

  * Experimental upstream version.
  * Allow test suite to fail, it's broken in this version.
  * Update list of files from doc/ that should be installed.
  * Forward port debian/ patches.

 -- Peter Palfrader <weasel@debian.org>  Fri, 12 Aug 2005 17:02:23 +0200
