@@ -407,7 +407,7 @@ rend_cache_store(const char *desc, size_t desc_len)
   e->desc = tor_malloc(desc_len);
   memcpy(e->desc, desc, desc_len);
 
-  log_fn(LOG_INFO,"Successfully stored rend desc '%s', len %d.",
+  log_fn(LOG_DEBUG,"Successfully stored rend desc '%s', len %d.",
          safe_str(query), (int)desc_len);
   return 1;
 }
